# ImageConverter

./: README.md
ImageConverter/ImgConverter/: CMakeLists.txt  main.cpp  visual.cpp  visual.h
ImageConverter/ImgLib/: CMakeLists.txt  bmp_image.cpp  jpeg_image.cpp  ppm_image.cpp
